<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.edu.uplb.ics.cs191.randomquizgenerator.EndActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewScore"
        android:text="00"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:textAlignment="textEnd"
        android:layout_marginLeft="10px"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/buttonPlayAgain"
        android:layout_alignStart="@+id/buttonPlayAgain"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPlayAgain"
        tools:text="@string/play_again"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:layout_marginTop="34dp"
        android:width="100dp"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/textViewScore"
        android:layout_toStartOf="@+id/textViewScore"
        android:id="@+id/editTextName"
        android:visibility="gone" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubmit"
        android:layout_alignBaseline="@+id/editTextName"
        android:layout_alignBottom="@+id/editTextName"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:visibility="gone" />
</RelativeLayout>
